--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
 
   minio:
-    image: minio/minio:latest
+    image: minio/minio
     environment:
       - MINIO_ACCESS_KEY=${CUBE_KEY}
       - MINIO_SECRET_KEY=${CUBE_SECRET}
