--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "s3"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "3.x.x",
-    "@aws-sdk/lib-storage": "3.x.x",
+    "@aws-sdk/client-s3": "3.5.x",
+    "@aws-sdk/lib-storage": "3.5.x",
     "joi": "17.x.x"
   },
   "devDependencies": {
