--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "devDependencies": {
     "@hapi/code": "8.x.x",
     "@hapi/hapi": "20.x.x",
+    "@hapi/hoek": "9.x.x",
     "@hapi/lab": "24.x.x",
     "dotenv": "8.x.x",
-    "form-data": "3.x.x",
+    "form-data": "4.x.x",
     "get-stream": "6.x.x",
     "standard": "16.x.x"
   },
